cluster/k3d-local/apps/portainer/namespace.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: portrainer
  labels:
    app.kubernetes.io/part-of: portrainer
